# vps-tradecopier

./: .gitignore  README.md  install.bat  pyproject.toml  start.bat  stop.bat
.claude/: CLAUDE.md  settings.json
.claude/commands/: check_security.md  compile_mql5.md
.claude/rules/: mql5-style.md  trading-logic.md
.claude/subagents/: api_integrator.md  mql_refactorer.md
config/: config.example.json
docs/: client-review-response.md  ms2-approval-evidence.md  ms2-pytest-output.txt  ms2-video-script.md  ms3-deliverables.md
docs/plans/: 2026-02-26-database-structure.md  2026-02-26-frontend-design.md  2026-02-26-trade-copier-architecture.md  2026-02-26-trade-copier-implementation.md  2026-03-13-broker-connection-status-design.md  2026-03-13-broker-connection-status-plan.md
ea/Include/: CopierDatabase.mqh  CopierLogger.mqh  CopierPipe.mqh  CopierProtocol.mqh
ea/Master/: TradeCopierMaster.mq5
ea/Slave/: TradeCopierSlave.mq5
hub/: config.py  main.py
hub/db/: manager.py  schema.sql
hub/mapping/: lot.py  magic.py  symbol.py
hub/monitor/: alerts.py  health.py  telegram_bot.py
hub/protocol/: models.py  serializer.py
hub/router/: router.py
hub/transport/: pipe_server.py
scripts/: backup_db.py  restore_db.py
tests/: test_alerts.py  test_api_links.py  test_api_mappings.py  test_api_telegram.py  test_api_terminals.py  test_backup_restore.py  test_config.py  test_db_manager.py  test_health.py  test_lot.py  test_magic.py  test_models.py  test_ms2_proof.py  test_ms3_stress.py  test_pipe_server.py  test_router.py  test_serializer.py  test_symbol.py  test_telegram_bot.py  test_telegram_ssl.py
web/api/: database.py  main.py  schemas.py
web/frontend/: .gitignore  (+1 more)
(+68 files in other folders)
