[project]
name = "trade-copier-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "pywin32>=306",
    "python-telegram-bot>=21.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hub*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
