[project]
name = "trade-copier-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "certifi>=2024.2.2",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pywin32>=306",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "psutil>=5.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hub*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: long-running tests (1h sustained load) — exclude via `-m 'not slow'`",
]
